--- a/src/scss/components/_btn-offer.scss
+++ b/src/scss/components/_btn-offer.scss
@@ -6,6 +6,7 @@
     padding-right: 24px; 
     position: relative;
     font-family: 'TT Lakes';
+    font-weight: 500;
     border: none;
     background: none;
     text-align: left;
