--- a/src/scss/components/_btn-offer.scss
+++ b/src/scss/components/_btn-offer.scss
@@ -7,6 +7,7 @@
     position: relative;
     font-family: 'TT Lakes';
     font-weight: 500;
+    cursor: pointer;
     border: none;
     background: none;
     text-align: left;
