--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -19,7 +19,7 @@
         flex-direction: row;
         justify-content: space-between;
         gap: 0;
-        padding: 15px 32px;
+        padding: 32px 32px 0;
         margin: 0 -32px 32px;
 
         &__development-data{
