--- a/src/scss/components/_btn-functional.scss
+++ b/src/scss/components/_btn-functional.scss
@@ -4,6 +4,7 @@
 .btn-functional{
     display: none;
     font-family: 'TT Lakes';
+    font-weight: 500;
     border: none;
     background: none;
     letter-spacing: -0.2px;
